Finished etch-a-sketch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="input">
+        <input class="userInput" type="text">
+        <button class="btn">Change Size</button>
+    </div>
+    <div class="container">
+        
+    </div>
 </body>
 </html>
